# color-tool-kmeans

./: .gitignore  AGENTS.md  ATTRIBUTIONS.md  CLAUDE.md  COLOR_SPACE_COMPARISON.md  LICENSE  README.md  TAURI-NATIVE-RUNBOOK.md  bootstrap.md  package.json  svelte-llms-full.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  electron-build.yml
RAG/ADR/: ADR-001-debounce-sliders  ADR-001-debounce-sliders.md  ADR-002-tauri-pivot.md
RAG/AI-EPIC/: AI-EPIC-001-electron-port-color-abstract-kmeans.md  AI-EPIC-002-tauri-rust-compute-pivot.md  AI-EPIC-003-ui-integration-and-perf-phase.md  AI-EPIC-004-electron-wasm-pivot.md  AI-EPIC-005-generic-ui-integration-and-shell-agnostic-work.md  AI-EPIC-006-tauri-bridge-reliability-and-native-mode-fixes.md  AI-EPIC-007-tauri-ui-graphs-exports.md
RAG/AI-IMP/: AI-IMP-001-worker-compute-pipeline-DEPRECATED.md  AI-IMP-002-polar-chart-renderer.md  AI-IMP-003-palette-bar-graph-DEPRECATED.md  AI-IMP-003-palette-bar-graph.md  AI-IMP-004-palette-csv-export-DEPRECATED.md  AI-IMP-005-png-svg-exports.md  AI-IMP-010-ci-di-and-precommit.md  AI-IMP-011-tauri-svelte-scaffold.md  AI-IMP-012-rust-image-io-and-sampling.md  AI-IMP-013-rust-color-spaces.md  AI-IMP-014-rust-kmeans-core.md  AI-IMP-015-tauri-ipc-contract.md  AI-IMP-021-svelte5-upgrade-ui-runes-and-tooling.md  AI-IMP-025-ipc-analyze-image-and-ui-integration.md  AI-IMP-031-urgent-benchmark-harness.md  AI-IMP-032-URGENT-kmeans-simd-soa-and-crate-evaluation.md  AI-IMP-033-fidelity-tails-explain-and-interactive-budget.md  AI-IMP-034-ipc-analyze-image-and-compute-wiring.md  AI-IMP-041-wasm-build-of-compute-core.md  AI-IMP-042-electron-shell-scaffold.md  AI-IMP-043-renderer-bridge-to-wasm.md  AI-IMP-044-exports-on-chromium.md  AI-IMP-045-ci-and-packaging.md  AI-IMP-046-bench-wasm-variant.md  AI-IMP-051-shell-agnostic-compute-and-fs-bridges.md  AI-IMP-052-home-view-finalization.md  AI-IMP-053-graphs-view-polish.md  AI-IMP-054-exports-integration-and-toasts.md  AI-IMP-055-preferences-store-and-theme.md  AI-IMP-056-accessibility-pass.md  AI-IMP-057-ci-renderer-checks-and-artifacts.md  AI-IMP-058-fix-tauri-fs-bridge-env-detection.md  AI-IMP-059-defer-bridge-caching-async-ready.md  AI-IMP-060-add-comprehensive-tauri-invoke-logging.md  AI-IMP-061-tauri-compute-response-validation.md  (+3 more)
bench-reports/: README.md
compute-wasm/: Cargo.toml
compute-wasm/src/: color.rs  kmeans.rs  lib.rs
contracts/: global-conventions.md
electron-app/: README-dev.md  electron.vite.config.1759686758732.mjs  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
figma/: home-spec.md  manifest.json
scripts/: loc-check.sh
tauri-app/: .eslintrc.cjs  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.cjs  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: color.rs  image_pipeline.rs  kmeans.rs  lib.rs  main.rs
(+95 files in other folders)
