[package]
name = "compute-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM build of the color compute core (sampling + k-means)"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"], default-features = true }
rand = { version = "0.8", features = ["small_rng"] }

# No rayon/packed-simd on wasm; k-means uses a scalar path here.
