[package]
name = "tauri-app"
version = "0.0.1"
edition = "2021"
authors = ["color-tool"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
