[package]
name = "tauri-app"
version = "0.0.1"
edition = "2021"
authors = ["color-tool"]
default-run = "tauri-app"

[features]
default = ["simd"]
bench-crate = ["kmeans_colors", "palette"]
simd = ["dep:wide"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
wide = { version = "0.7", optional = true, default-features = false, features = ["std"] }
kmeans_colors = { version = "0.6", optional = true, default-features = false, features = ["palette_color"] }
palette = { version = "0.7", optional = true, default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "rmpc-theme-gen"
path = "src/bin/rmpc_theme_gen.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
